--- a/TypeScript/playground/index.html
+++ b/TypeScript/playground/index.html
@@ -31,6 +31,16 @@
 	    </div>
     </footer>
 		
-    <script src="/js/app.js"></script>
+		<script src="system.js"></script>
+		<script>
+			// set our baseURL reference path
+			System.config({
+				map: {app: 'js'},
+				packages: {app: {main: 'app.js',  defaultExtension: 'js'}}
+			});
+
+			// loads /app/main.js
+			System.import('js/app.js');
+		</script>
   </body>
 </html>
