CDN SystemJS load

--- a/TypeScript/playground/index.html
+++ b/TypeScript/playground/index.html
@@ -31,7 +31,7 @@
 	    </div>
     </footer>
 		
-		<script src="system.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.11/system.js"></script>
 		<script>
 			// set our baseURL reference path
 			System.config({
