--- a/AngularIO/playground/index.html
+++ b/AngularIO/playground/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <!-- base href="/" / -->
+    <base href="/" />
     
     <title>Contacts Book</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
